<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ACD_VideoRoot">
    <SurfaceView
        android:layout_gravity="center"
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:contentDescription="@string/ACD_VideoView"/>
    <View
        android:id="@+id/controller_underlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ACD_Underlay"/>
    <FrameLayout
        android:id="@+id/danmaku_view"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ACD_DanmakuView"/>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/buffering_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ACD_BufferingView">
        <TextView
            android:textSize="12sp"
            android:textColor="@color/videoplay__video_title_text"
            android:ellipsize="marquee"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VideoView_buffering"
            android:singleLine="true"
            android:marqueeRepeatLimit="0"
            style="@style/PlayerControlBarButton"/>
        <ProgressBar
            android:id="@+id/buffering_view"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="60dp"
            android:layout_height="60dp"
            style="?android:attr/progressBarStyleLarge"/>
    </LinearLayout>
    <include
        android:id="@+id/controller_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ACD_ControllerView"
        layout="@layout/bili_app_player_controller_pink_new"/>
    <ViewStub
        android:id="@+id/lock_view"
        android:visibility="gone"
        android:layout="@layout/bili_app_player_locker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/ACD_LockView"/>
    <include
        android:id="@+id/preloading_view"
        android:visibility="gone"
        android:contentDescription="@string/ACD_PreloadingView"
        layout="@layout/bili_app_player_preloading"/>
    <include layout="@layout/bili_app_player_media_level_bar2"/>
</FrameLayout>
