<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/videoplay__control_panel_bkgd_new"
    android:layout_width="260dp"
    android:layout_height="match_parent">
    <include layout="@layout/bili_view_closeable_bar"/>
    <ScrollView
        android:scrollbarStyle="outsideOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <tv.biliclassic.widget.RadioGridGroup
                android:id="@+id/player_options_completion_actions"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <tv.biliclassic.widget.RadioButton
                    android:id="@+id/completion_actions_loop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/Player_options_title_action_loop"
                    android:textColor="@color/global__text"
                    android:button="@drawable/ic_btn_player_options_radio"/>
                <tv.biliclassic.widget.RadioButton
                    android:id="@+id/completion_actions_switch_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:paddingLeft="20dp"
                    android:text="@string/Player_options_title_action_next"
                    android:textColor="@color/global__text"
                    android:button="@drawable/ic_btn_player_options_radio"/>
                <tv.biliclassic.widget.RadioButton
                    android:id="@+id/completion_actions_switch_part_loop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:paddingLeft="20dp"
                    android:text="@string/Player_options_title_action_next_loop"
                    android:textColor="@color/global__text"
                    android:button="@drawable/ic_btn_player_options_radio"/>
                <tv.biliclassic.widget.RadioButton
                    android:id="@+id/completion_actions_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:paddingLeft="20dp"
                    android:text="@string/Player_options_title_action_pause"
                    android:textColor="@color/global__text"
                    android:button="@drawable/ic_btn_player_options_radio"/>
                <tv.biliclassic.widget.RadioButton
                    android:id="@+id/completion_actions_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:paddingLeft="20dp"
                    android:text="@string/Player_options_title_action_quit"
                    android:textColor="@color/global__text"
                    android:button="@drawable/ic_btn_player_options_radio"/>
            </tv.biliclassic.widget.RadioGridGroup>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Player_options_title_enable_gesture"
                    android:layout_weight="1"
                    style="@style/PlayerOptionsPannelItemText"/>
                <CheckBox
                    android:id="@+id/player_options_enable_gesture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/ic_btn_player_options_switch"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Player_options_title_keep_background"
                    android:layout_weight="1"
                    style="@style/PlayerOptionsPannelItemText"/>
                <CheckBox
                    android:id="@+id/player_options_keep_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/ic_btn_player_options_switch"/>
            </LinearLayout>
            <TextView
                android:textSize="15sp"
                android:textColor="@color/videoplay__video_title_text"
                android:gravity="center_vertical"
                android:id="@+id/player_options_screen_orientation"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Player_option_menu_change_screen_orientation"
                android:drawableRight="@drawable/ic_player_options_item_right"
                style="@style/Widget.App.Panel.ListItem"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
