<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ACD_ControllerView">
    <RelativeLayout
        android:id="@+id/top"
        android:background="@color/videoplay__control_panel_bkgd_new"
        android:paddingBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/top_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">
            <TextView
                android:textSize="14sp"
                android:textColor="@color/videoplay__video_title_text"
                android:gravity="center"
                android:id="@+id/date_time"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:singleLine="true"
                style="@style/PlayerControlBarButton"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/videoplay__video_title_text"
                android:gravity="center"
                android:id="@+id/network_status"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                style="@style/PlayerControlBarButton"/>
            <tv.biliclassic.widget.BatteryView2
                android:focusable="false"
                android:layout_width="29dp"
                android:layout_height="10dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@null"
                style="@style/PlayerControlBarButton"/>
            <ImageView
                android:id="@+id/media_info"
                android:visibility="gone"
                android:layout_width="@dimen/player_status_bar_button_layout_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_media_info"
                android:contentDescription="@null"
                style="@style/PlayerControlBarButton"/>
            <TextView
                android:textSize="15sp"
                android:textColor="@color/videoplay__video_title_text"
                android:gravity="center"
                android:id="@+id/page_list_selector"
                android:paddingLeft="14dp"
                android:visibility="gone"
                android:layout_width="@dimen/player_status_bar_options_menu_items_layout_width"
                android:layout_height="match_parent"
                android:text="@string/VideoView_page_list_selector"
                android:singleLine="true"
                style="@style/PlayerControlBarSpinner"/>
            <TextView
                android:textSize="15sp"
                android:textColor="@color/videoplay__video_title_text"
                android:gravity="center"
                android:id="@+id/media_quality"
                android:paddingLeft="14dp"
                android:layout_width="@dimen/player_status_bar_options_menu_items_layout_width"
                android:layout_height="match_parent"
                android:singleLine="true"
                style="@style/PlayerControlBarSpinner"/>
            <ImageView
                android:id="@+id/options_menu"
                android:layout_width="@dimen/player_status_bar_button_layout_width"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_player_options_menu"
                android:contentDescription="@null"
                style="@style/PlayerControlBarButton"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/top_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/top_right"
            android:layout_alignParentLeft="true">

            <ImageView
                android:id="@+id/back"
                style="@style/PlayerControlBarButton"
                android:layout_width="@dimen/player_status_bar_button_layout_width"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="@drawable/bili_player_back_button" />

            <TextView
                android:textSize="17sp"
                android:textColor="@color/videoplay__video_title_text"
                android:ellipsize="marquee"
                android:gravity="center"
                android:id="@+id/title"
                android:paddingRight="50dp"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:marqueeRepeatLimit="0"
                style="@style/PlayerControlBarButton"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/bottom"
        android:background="@drawable/bili_player_control_background"
        android:paddingTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <SeekBar
            android:id="@+id/seekbar"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.App.Seekbar.Pink"/>
        <View
            android:id="@+id/divider_line"
            style="@style/CommonUnderline"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/bottom_controllers_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_bottom_controller_bar_layout_height">
            <ImageView
                android:id="@+id/play_pause"
                android:layout_width="@dimen/player_controller_bar_button_layout_short_width"
                android:layout_height="match_parent"
                android:src="@drawable/bili_player_ctrl_play_pause"
                android:contentDescription="@null"
                style="@style/PlayerControlBarButton"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/time_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/split_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/VideoView_timed_text_split_char"/>
                <TextView
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/time_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:id="@+id/play_mode"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"/>
            <Button
                android:id="@+id/toggle_aspect_ratio_button"
                android:layout_width="@dimen/player_controller_bar_button_layout_width"
                android:layout_height="match_parent"
                android:text="@string/PlayerController_tips_toggle_aspect_ratio"
                android:drawableTop="@drawable/ic_toggle_aspect_ratio"
                android:contentDescription="@null"
                style="@style/PlayerControlBarButtonWithText"/>
            <Button
                android:id="@+id/toggle_danmaku_button"
                android:layout_width="@dimen/player_controller_bar_button_layout_width"
                android:layout_height="match_parent"
                android:text="@string/PlayerController_tips_toggle_danmaku"
                android:drawableTop="@drawable/bili_player_ctrl_toggle_danmaku"
                android:contentDescription="@null"
                style="@style/PlayerControlBarButtonWithText"/>
            <Button
                android:id="@+id/send_danmaku"
                android:layout_width="@dimen/player_controller_bar_button_layout_width"
                android:layout_height="match_parent"
                android:text="@string/PlayerController_tips_send_danmaku"
                android:drawableTop="@drawable/ic_send_danmaku"
                android:contentDescription="@null"
                style="@style/PlayerControlBarButtonWithText"/>
            <Button
                android:id="@+id/lock_player"
                android:layout_width="@dimen/player_controller_bar_button_layout_short_width"
                android:layout_height="match_parent"
                android:text="@string/PlayerController_tips_lock_player"
                android:drawableTop="@drawable/ic_player_locked_2"
                android:contentDescription="@null"
                style="@style/PlayerControlBarButtonWithText"/>
        </LinearLayout>
    </LinearLayout>
    <ViewStub
        android:id="@+id/danmaku_sender_viewstub"
        android:visibility="gone"
		android:layout="@layout/bili_app_player_danmaku_input"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:contentDescription="@string/ACD_DanmakuInputView"/>
    <ViewStub
        android:id="@+id/options_menu_items_stub"
		android:visibility="invisible"
		android:layout="@layout/bili_app_player_options_menu_items"
		android:layout_width="@dimen/player_status_bar_options_menu_items_layout_width"
		android:layout_height="wrap_content"
		android:layout_below="@+id/top"
		android:layout_alignParentRight="true"
		android:contentDescription="@null"/>
    <ListView
        android:id="@+id/media_quality_options"
        android:background="@color/videoplay__control_panel_bkgd_new"
        android:visibility="gone"
        android:layout_width="@dimen/player_status_bar_options_menu_items_layout_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_alignParentRight="true"
        android:contentDescription="@null"/>
</RelativeLayout>
